[gd_scene load_steps=15 format=2]

[ext_resource path="res://Location/Scripts/End.gd" type="Script" id=1]
[ext_resource path="res://Ship/Hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://Location/Tiles/Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Location/Scripts/Back_to_ship.gd" type="Script" id=4]
[ext_resource path="res://Figuras/Sprites.png" type="Texture" id=5]
[ext_resource path="res://Ship/Item.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/geompixel.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.30702, 8 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 0.191406, 0.191406, 0.191406, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 98, 0, 0 )
initial_velocity = 10.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "Bad_ending"
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("BadEnding:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00647938, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BadEnding/Bad:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BadEnding:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GoodEnding:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Partner:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Smoke:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("House:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Hero:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.00588786 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 106, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hero:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.00588786 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "GoodEnding"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("Hero:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 106, 0 ), Vector2( -10, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hero:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Item:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Heart:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.5, 4, 4.3, 4.6, 4.9, 5.2, 5.5, 5.8, 6.1, 6.4, 6.7, 7, 7.3, 7.6, 7.9, 8.2, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Heart:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Heart:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.4932, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -31, -8 ), Vector2( -31, -19 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Heart:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 2.4932 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GoodEnding/GoodEnding3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 12, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("GoodEnding:percent_visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("GoodEnding/GoodEnding2:percent_visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 9, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("House:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Smoke:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("BadEnding:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Partner:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("GoodEnding:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=6]
size = 5
font_data = ExtResource( 7 )

[node name="Start" type="Node2D"]
script = ExtResource( 1 )

[node name="Hero" parent="." instance=ExtResource( 2 )]
position = Vector2( 106, 0 )
scale = Vector2( -1, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 16, -53 )
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="Mapa" type="TileMap" parent="."]
modulate = Color( 0.611765, 0.443137, 0, 1 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -851979, 0, 0, -851978, 0, 1, -851977, 0, 1, -851976, 0, 1, -851975, 0, 1, -851974, 0, 1, -851973, 0, 1, -851972, 0, 1, -851971, 0, 1, -851970, 0, 1, -851969, 0, 1, -917504, 0, 1, -917503, 0, 1, -917502, 0, 1, -917501, 0, 1, -917500, 0, 1, -917499, 0, 1, -917498, 0, 1, -917497, 0, 1, -917496, 0, 1, -917495, 0, 1, -917494, 0, 1, -917493, 0, 1, -917492, 0, 1, -917491, 0, 2, -589837, 0, 65536, -524301, 0, 131072, -458765, 0, 131072, -393229, 0, 131072, -327693, 0, 131072, -262157, 0, 131072, -196621, 0, 131072, -262128, 0, 65536, -131085, 0, 131072, -196592, 0, 131072, -65549, 0, 131072, -131056, 0, 131072, -13, 0, 131072, -65520, 0, 131072, 65523, 0, 65538, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 65537, 65536, -5, 0, 131074, -65532, 0 )

[node name="Back_to_ship" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 122, -8 )
script = ExtResource( 4 )

[node name="Figura" type="Sprite" parent="Back_to_ship"]
modulate = Color( 0.321569, 0.294118, 0.823529, 1 )
rotation = -1.57079
texture = ExtResource( 5 )
vframes = 10
hframes = 10

[node name="Timer" type="Timer" parent="Back_to_ship"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back_to_ship"]
shape = SubResource( 1 )

[node name="Smoke" type="Particles2D" parent="."]
position = Vector2( -60, -28 )
rotation = 4.71238
scale = Vector2( 2, 2 )
emitting = false
lifetime = 0.3
preprocess = 5.0
speed_scale = 0.05
randomness = 1.0
process_material = SubResource( 4 )

[node name="House" type="Sprite" parent="."]
modulate = Color( 0.0509804, 0.572549, 0.105882, 1 )
position = Vector2( -57, -16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 10
hframes = 10
frame = 26

[node name="Partner" type="Sprite" parent="."]
visible = false
modulate = Color( 0.321569, 0.294118, 0.823529, 1 )
position = Vector2( -31, -4 )
texture = ExtResource( 5 )
vframes = 20
hframes = 20
frame = 102

[node name="Ending" type="AnimationPlayer" parent="."]
anims/Bad_ending = SubResource( 7 )
anims/GoodEnding = SubResource( 5 )

[node name="Item" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -21, -5 )
ITEM_TYPE = 1

[node name="Heart" type="Sprite" parent="."]
visible = false
modulate = Color( 0.862745, 0.411765, 0.901961, 1 )
position = Vector2( -31, -19 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
vframes = 10
hframes = 10
frame = 1

[node name="GoodEnding" type="Label" parent="."]
editor/display_folded = true
visible = false
margin_left = -85.0
margin_top = -101.0
margin_right = 111.0
margin_bottom = -95.0
custom_fonts/font = SubResource( 6 )
text = "Thanks to you, we are all safe!

The baby will born soon enough, so you might have to make more trips across the universe to keep us alive. "
autowrap = true
percent_visible = 0.0

[node name="GoodEnding2" type="Label" parent="GoodEnding"]
margin_left = 72.0
margin_top = 83.0
margin_right = 130.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 6 )
text = "...Baby...?"
autowrap = true
percent_visible = 0.0

[node name="GoodEnding3" type="Label" parent="GoodEnding"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 147.0
margin_top = 109.0
margin_right = 221.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 6 )
text = "to be continued..."
autowrap = true

[node name="BadEnding" type="Label" parent="."]
editor/display_folded = true
margin_left = 81.0
margin_top = -18.0
margin_right = 277.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 6 )
text = "Dang..."
autowrap = true
percent_visible = 0.0

[node name="Bad" type="Label" parent="BadEnding"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 13.0
margin_top = 26.0
margin_right = 55.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )
text = "Try again."
autowrap = true

[node name="End" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="Back_to_ship" to="Back_to_ship" method="_on_Back_to_ship_body_entered"]
[connection signal="timeout" from="Back_to_ship/Timer" to="Back_to_ship" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Ending" to="." method="_on_Ending_animation_finished"]
[connection signal="timeout" from="End" to="." method="_on_End_timeout"]
